--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
+    "formik": "^2.4.9",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^7.12.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18",
+    "yup": "^1.7.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
